--- a/index.html
+++ b/index.html
@@ -30,47 +30,48 @@
 <body>
   <div class="container">
     <!-- Rating state start -->
-    <div class="rating-state-card">
+    <div id="ratingStateCard" class="rating-state-card">
       <img src="images/icon-star.svg" alt="" class="star-icon" />
       <p class="heading">How did we do?</p>
-      <p class="rating-text">
+      <p class="body-text">
         Please let us know how we did with your support request. All feedback
         is appreciated to help us improve our offering!
       </p>
       <form class="submit-rating-form" action="#">
         <ul class="rating-buttons">
           <label class="for-rating-button" for="score-1">
-            <input class="rating-button" type="radio" name="rating" id="score-1" />
+            <input class="rating-button" type="radio" name="rating" id="score-1" value="1" />
             <span>1</span>
           </label>
           <label class="for-rating-button" for="score-2">
-            <input class="rating-button" type="radio" name="rating" id="score-2" />
+            <input class="rating-button" type="radio" name="rating" id="score-2" value="2" />
             <span>2</span>
           </label>
           <label class="for-rating-button" for="score-3">
-            <input class="rating-button" type="radio" name="rating" id="score-3" />
+            <input class="rating-button" type="radio" name="rating" id="score-3" value="3" />
             <span>3</span>
           </label>
           <label class="for-rating-button" for="score-4">
-            <input class="rating-button" type="radio" name="rating" id="score-4" />
+            <input class="rating-button" type="radio" name="rating" id="score-4" value="4" />
             <span>4</span>
           </label>
           <label class="for-rating-button" for="score-5">
-            <input class="rating-button" type="radio" name="rating" id="score-5" />
+            <input class="rating-button" type="radio" name="rating" id="score-5" value="5" />
             <span>5</span>
           </label>
         </ul>
-        <button class="submit-button" type="button">Submit</button>
+        <button id="submitButton" class="submit-button" type="button">Submit</button>
       </form>
     </div>
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
-    <div class="thank-you-state-card">
-      <img src="images/illustration-thank-you.svg" alt="" class="illustartion-thank-you">
-      <p class="selected-result">You selected <span id="selectedScore" class="selected-score">#</span> out of 5</p>
+    <div id="thankYouStateCard" class="thank-you-state-card">
+      <img class="illustration" src="images/illustration-thank-you.svg" alt="" class="illustartion-thank-you">
+      <p class="selected-result">You selected <span id="selectedScore" class="selected-score" value="#">#</span> out of
+        5</p>
       <p class="heading">Thank you!</p>
-      <p class="thank-you-text">
+      <p class="body-text">
         We appreciate you taking the time to give a rating. If
         you ever need more support, don’t hesitate to get in touch!
       </p>
