submit icons padding fixed

--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
         <ul class="rating-buttons">
           <label class="for-rating-button" for="score-1">
             <input class="rating-button" type="radio" name="rating" id="score-1" value="1" />
-            <span>1</span>
+            <span class="rating-span">1</span>
           </label>
           <label class="for-rating-button" for="score-2">
             <input class="rating-button" type="radio" name="rating" id="score-2" value="2" />
-            <span>2</span>
+            <span class="rating-span">2</span>
           </label>
           <label class="for-rating-button" for="score-3">
             <input class="rating-button" type="radio" name="rating" id="score-3" value="3" />
-            <span>3</span>
+            <span class="rating-span">3</span>
           </label>
           <label class="for-rating-button" for="score-4">
             <input class="rating-button" type="radio" name="rating" id="score-4" value="4" />
-            <span>4</span>
+            <span class="rating-span">4</span>
           </label>
           <label class="for-rating-button" for="score-5">
             <input class="rating-button" type="radio" name="rating" id="score-5" value="5" />
-            <span>5</span>
+            <span class="rating-span">5</span>
           </label>
         </ul>
         <button id="submitButton" class="submit-button" type="button">Submit</button>
