fixing margins and padding between elements

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         is appreciated to help us improve our offering!
       </p>
       <form class="submit-rating-form" action="#">
-        <ul class="rating-buttons">
+        <div class="rating-buttons">
           <label class="for-rating-button" for="score-1">
             <input class="rating-button" type="radio" name="rating" id="score-1" value="1" />
             <span class="rating-span">1</span>
@@ -59,7 +59,7 @@
             <input class="rating-button" type="radio" name="rating" id="score-5" value="5" />
             <span class="rating-span">5</span>
           </label>
-        </ul>
+        </div>
         <button id="submitButton" class="submit-button" type="button">Submit</button>
       </form>
     </div>
